# openharmony

./: README.md
e13_iot_smart_home/: BUILD.gn  README_zh.md  iot_smart_home_example.c
e13_iot_smart_home/include/: adc_key.h  components.h  drv_motor.h  drv_sensors.h  iot.h  lcd.h  lcd_font.h  mq2.h  picture.h  smart_home.h  smart_home_event.h  su_03t.h
e13_iot_smart_home/src/: adc_key.c  beep_example.c  components.c  drv_light.c  drv_motor.c  drv_sensors.c  iot.c  mq2.c  picture.c  smart_home.c  smart_home_event.c  su_03t.c
