# Copyright (c)  2024 iSoftStone Education Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("iot_smart_home_example") {
  sources = [
    "iot_smart_home_example.c",
    "src/lcd.c",
    "src/components.c",
    "src/smart_home.c",
    "src/smart_home_event.c",
    "src/su_03t.c",
    "src/iot.c" ,
    "src/picture.c" ,
    "src/adc_key.c" ,
    "src/drv_light.c",
    "src/drv_motor.c",
    "src/drv_sensors.c",
    "src/mq2.c", 
  ]

  include_dirs = [
    "//utils/native/lite/include",
    "include",
    "src/include" ,
    "//kernel/liteos_m/components/shell/include",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//device/rockchip/rk2206/adapter/include",
    "//device/rockchip/rk2206/sdk_liteos/board/include",
    "//device/rockchip/hardware/lib/hal/inc",
    "//device/rockchip/hardware/lib/CMSIS/Device/RK2206/Include/",
    "//third_party/cJSON",
    "//third_party/musl/porting/liteos_m/kernel/include",
    "//third_party/paho_mqtt/MQTTPacket/src",
    "//third_party/paho_mqtt/MQTTClient-C/src",
  ]

  deps = [ "//device/rockchip/hardware:hardware" ]
}
